--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: ThorVision
-site_url: https://kontex-neuro.github.io/ThorVision/
+site_url: https://kontex-neuro.github.io/ThorVisionUserManual/
 site_description: ThorVision Desktop Video Capture GUI App
 copyright: Copyright &copy; 2025 <a href="https://www.kontex.io/" target="_blank" rel="noopener">KonteX Neuroscience</a>
 
